Removed unused callbacks, added cut/copy/delete support to the note editor (and paste by middle-clicking, needs fixing though)

--- a/dino.glade
+++ b/dino.glade
@@ -249,7 +249,7 @@
       </child>
 
       <child>
-	<widget class="GtkNotebook" id="notebook1">
+	<widget class="GtkNotebook" id="main_notebook">
 	  <property name="border_width">2</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
