--- a/dino.glade
+++ b/dino.glade
@@ -4,7 +4,6 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="main_window">
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Dino</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
@@ -46,7 +45,7 @@
 		      <signal name="activate" handler="on_clear_all1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image36">
+			<widget class="GtkImage" id="image48">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-new</property>
 			  <property name="icon_size">1</property>
@@ -165,7 +164,7 @@
 		      <signal name="activate" handler="on_play1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image37">
+			<widget class="GtkImage" id="image49">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-play</property>
 			  <property name="icon_size">1</property>
@@ -186,7 +185,7 @@
 		      <signal name="activate" handler="on_stop1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image38">
+			<widget class="GtkImage" id="image50">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-pause</property>
 			  <property name="icon_size">1</property>
@@ -207,9 +206,44 @@
 		      <signal name="activate" handler="on_go_to_start1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image39">
+			<widget class="GtkImage" id="image51">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-previous</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkMenuItem" id="plugins1">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">_Plugins</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="on_plugins1_activate" last_modification_time="Tue, 09 May 2006 12:28:52 GMT"/>
+
+	      <child>
+		<widget class="GtkMenu" id="plugins1_menu">
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="plugins_manage_plugins">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">_Manage plugins</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_manage_plugins1_activate" last_modification_time="Tue, 09 May 2006 12:28:52 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image52">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-disconnect</property>
 			  <property name="icon_size">1</property>
 			  <property name="xalign">0.5</property>
 			  <property name="yalign">0.5</property>
@@ -241,7 +275,7 @@
 		      <signal name="activate" handler="on_about1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image40">
+			<widget class="GtkImage" id="image53">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-about</property>
 			  <property name="icon_size">1</property>
@@ -651,12 +685,14 @@ Public License instead of this License.
 </widget>
 
 <widget class="GtkDialog" id="dlg_plugins">
+  <property name="border_width">2</property>
   <property name="title" translatable="yes">Plugins</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
+  <property name="icon">head.png</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
@@ -669,7 +705,7 @@ Public License instead of this License.
     <widget class="GtkVBox" id="dialog-vbox1">
       <property name="visible">True</property>
       <property name="homogeneous">False</property>
-      <property name="spacing">0</property>
+      <property name="spacing">5</property>
 
       <child internal-child="action_area">
 	<widget class="GtkHButtonBox" id="dialog-action_area1">
@@ -677,7 +713,7 @@ Public License instead of this License.
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
 
 	  <child>
-	    <widget class="GtkButton" id="closebutton1">
+	    <widget class="GtkButton" id="dlg_plugins_close">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
@@ -707,11 +743,11 @@ Public License instead of this License.
 	  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 	  <child>
-	    <widget class="GtkTreeView" id="treeview1">
+	    <widget class="GtkTreeView" id="trv_plugins">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="headers_visible">True</property>
-	      <property name="rules_hint">False</property>
+	      <property name="rules_hint">True</property>
 	      <property name="reorderable">False</property>
 	      <property name="enable_search">True</property>
 	      <property name="fixed_height_mode">False</property>
