Changed website link in About dialog

--- a/dino.glade
+++ b/dino.glade
@@ -2294,7 +2294,7 @@ consider it more useful to permit linking proprietary applications with the
 library.  If this is what you want to do, use the GNU Library General
 Public License instead of this License.
 </property>
-  <property name="website">http://dinoseq.sf.net</property>
+  <property name="website">http://dino.nongnu.org</property>
   <property name="website_label" translatable="yes">Webpage</property>
   <property name="logo">midisaurus.png</property>
   <property name="icon">head.png</property>
